# Clipboard

./: Clipboard.cabal  README.md  license
System/: Clipboard.hs
System/Clipboard/: Windows.hs  X11.hs
